opam-version: "1.2"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://bitbucket.org/zandoye/ppx_lwts/"
bug-reports: "https://bitbucket.org/zandoye/ppx_lwts/issues"
license: "MIT"
tags: [
  "ppx"
  "syntax extension"
  "monadic"
  "lwt"
]
dev-repo: "hg://https://bitbucket.org/zandoye/ppx_lwts"
build: [
  [make]
]
depends: [
  "ocaml-migrate-parsetree" {>="0.6"}
  "ppx_tools_versioned"
  "jbuilder" {build}
]
available: [ocaml-version >= "4.02.3"]
